resolve #7309 Property grid help text does not wrap when overridingProperty is defined

--- a/packages/survey-creator-core/src/property-grid-theme/blocks/spg-overriding.scss
+++ b/packages/survey-creator-core/src/property-grid-theme/blocks/spg-overriding.scss
@@ -1,6 +1,6 @@
 .spg-boolean-wrapper--overriding.spg-boolean-wrapper--overriding {
   min-width: 0;
-  flex: 0 0 max-content;
+  flex: 0 0 fit-content;
 }
 .spg-link-wrapper--overriding {
   align-self: end;
